--- a/Patient.Api/Patient.Api/Components/Pages/MainViewPages/Registration.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/MainViewPages/Registration.razor
@@ -1,5 +1,5 @@
 ﻿@inject NavigationManager Navigation
-@rendermode InteractiveWebAssembly
+@rendermode InteractiveServer
 
 @layout Layout.LoggingLayout
 @page "/rejestracja"
