--- a/Patient.Api/Patient.Api/Components/Pages/MainViewPages/Registration.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/MainViewPages/Registration.razor
@@ -7,18 +7,29 @@
 <div class="container">
     <div class="row">
         <div class="col-6 d-flex align-items-center">
+            <div class="card shadow-sm" style="width: 100%; max-width: 400px;">
+                <div class="card-body">
+                    <h2 class="card-title text-center mb-4">Pacjent</h2>
+                    <NavLink href="/rejestracjaPacjent">
+                        <btn type="button" class="btn btn-primary"> Logowanie</btn>
+                    </NavLink>
+                </div>
+            </div>
+
             <NavLink href="/rejestracjaPacjent">
-                <btn type="button" class="btn btn-primary"> Pacjent</btn>
+                <btn type="button" class="btn btn-primary"> Logowanie</btn>
             </NavLink>
             
         </div>
         <div class="col-6 d-flex align-items-center">
-            <NavLink href="/rejestracjaLekarz">
-                <btn type="button" class="btn btn-primary"> Lekarz</btn>
-            </NavLink>
-            <NavLink class="btn btn-primary">
-
-            </NavLink>
+            <div class="card shadow-sm" style="width: 100%; max-width: 400px;">
+                <div class="card-body">
+                    <h2 class="card-title text-center mb-4">Lekarz</h2>
+                    <NavLink href="/rejestracjaLekarz">
+                        <btn type="button" class="btn btn-primary"> Logowanie</btn>
+                    </NavLink>
+                </div>
+            </div>
         </div>
     </div>
 
