--- a/Patient.Api/Patient.Api/Components/Logging/DoctorLoggingPage.razor
+++ b/Patient.Api/Patient.Api/Components/Logging/DoctorLoggingPage.razor
@@ -7,11 +7,11 @@
 @using Patient.Domain.Entities.Actors
 @using Patient.Domain.Entities.Additional;
 @using System.Text
-@using Patient.Api.Components.Account
 @using System.ComponentModel.DataAnnotations
 @using Microsoft.AspNetCore.Identity
 @using System.Security.Claims
 @using Patient.Domain.Constants
+@using Patient.Application.Account
 
 
 @inject NavigationManager Navigation
