--- a/Patient.Api/Patient.Api/Components/Pages/MainViewPages/Registration.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/MainViewPages/Registration.razor
@@ -6,7 +6,11 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-6 d-flex align-items-center">
+        <p class="text-center">Dzielny pacjent - w ciaglej opiece</p>
+    </div>
+    <div class="row">
+        <h2 class="align-items-center text-center pt-5">Zaloguj się</h2>
+        <div class="col-6 pt-5 d-flex align-items-center text-center justify-content-center">
             <div class="card shadow-sm" style="width: 100%; max-width: 400px;">
                 <div class="card-body">
                     <h2 class="card-title text-center mb-4">Pacjent</h2>
@@ -16,12 +20,9 @@
                 </div>
             </div>
 
-            <NavLink href="/rejestracjaPacjent">
-                <btn type="button" class="btn btn-primary"> Logowanie</btn>
-            </NavLink>
-            
+
         </div>
-        <div class="col-6 d-flex align-items-center">
+        <div class="col-6 d-flex align-items-center justify-content-center text-center pt-5">
             <div class="card shadow-sm" style="width: 100%; max-width: 400px;">
                 <div class="card-body">
                     <h2 class="card-title text-center mb-4">Lekarz</h2>
