--- a/Patient.Api/Patient.Api/Components/Pages/Registration/RegisterDoctor.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/Registration/RegisterDoctor.razor
@@ -2,7 +2,6 @@
 @using System.Diagnostics
 @using System.Timers
 @using AutoMapper
-@using Patient.Api.Client.AdditionalClasses
 @using Patient.Domain.Interfaces
 @using Patient.Domain.Constants
 @using Patient.Domain.Exceptions
@@ -31,10 +30,10 @@
 @page "/rejestracjaLekarz"
 
 
-<h3>RegisterDoctor</h3>
 
 <div class="container">
     <div class="row justify-content-center pt-5">
+        <h2>Lekarz - rejestracja</h2>
         <div class="col-md-6">
             <div class="card">
                 <div class="card-header">Rejestracja</div>
