--- a/Patient.Api/Patient.Api/Components/Pages/Registration/RegisterPatient.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/Registration/RegisterPatient.razor
@@ -1,7 +1,6 @@
 ﻿@using System.Diagnostics
 @using System.Timers
 @using AutoMapper
-@using Patient.Api.Client.AdditionalClasses
 @using Patient.Domain.Interfaces
 @using Patient.Domain.Constants
 @using Patient.Domain.Exceptions
@@ -28,6 +27,7 @@
 
 <div class="container">
     <div class="row justify-content-center pt-5">
+        <h2>Pacjent - rejestracja</h2>
         <div class="col-md-6">
             <div class="card">
                 <div class="card-header">Rejestracja</div>
@@ -87,9 +87,9 @@
             }
             @if (successfullRegistration == true)
             {
-            <div class="alert alert-success" role="alert">
-            Rejestracja przebiegla pomyslnie!
-            </div>
+                <div class="alert alert-success" role="alert">
+                    Rejestracja przebiegla pomyslnie!
+                </div>
 
             }
 
