--- a/Patient.Api/Patient.Api.Client/Pages/PatientPages/Forms/CreateReportForm.razor
+++ b/Patient.Api/Patient.Api.Client/Pages/PatientPages/Forms/CreateReportForm.razor
@@ -19,8 +19,7 @@
             <div class="col justify-content-start align-content-start">
                 <NavLink href="/pacjent/raporty">
                     <btn type="button" class="back-icon bi-arrow-left"></btn>
-                </NavLink>
-                
+                </NavLink> 
             </div>
             <div class="col">
                 <h2 class="text-center">Dodaj raport</h2>
@@ -89,7 +88,7 @@
             </div>
             <div class="row pt-5">
                 <div class="d-flex d-flex-column justify-content-center align-items-center" >
-                    <btn type="button" id="BtnAddReport" @onclick="HandleAddReport" style="width: 200px;" class="btn btn-primary">Dodaj raport</btn>
+                    <button type="button" id="BtnAddReport" @onclick="HandleAddReport" style="width: 200px;" class="btn btn-primary">Dodaj raport</button>
                 </div>
             </div>
             <div class="d-flex d-flex-column align-items-center justify-content-center pt-3">
