--- a/Patient.Api/Patient.Api.Client/Pages/PatientPages/Reports.razor
+++ b/Patient.Api/Patient.Api.Client/Pages/PatientPages/Reports.razor
@@ -18,8 +18,8 @@
         </header>
         <div class="row pt-5">
             <div class="col d-flex justify-content-center align-items-center">
-                <NavLink class="nav-link" href="/pacjent/dodaj-raport">
-                    <btn type="button" href="/pacjent/dodaj-raport" class="btn btn-primary">Zloz raport tutaj</btn>
+                <NavLink class="btn btn-primary" href="/pacjent/dodaj-raport">
+                    Zloz raport tutaj
                 </NavLink>
                 
 
