--- a/Patient.Api/Patient.Api.Client/Layout/MyAccount/PatientAccountLayout.razor.css
+++ b/Patient.Api/Patient.Api.Client/Layout/MyAccount/PatientAccountLayout.razor.css
@@ -1,15 +1,16 @@
 .page {
-    position: relative;
+    position: static;
     display: flex;
     flex-direction: column;
 }
 
 main {
     flex: 1;
+    
 }
 
 .sidebar {
-    background-image: linear-gradient(45deg, rgb(144, 238, 144) 0%, rgb(0,123,255)70%);
+    background: gray;
 }
 
 .top-row {
@@ -51,12 +52,24 @@ main {
         flex-direction: row;
     }
 
-    .sidebar {
+    .sidebar-top {
+        width: 100vw;
+        height: 100px;
+        position: sticky;
+        top: 0;
+    }
+
+    .sidebar-side {
         width: 250px;
         height: 100vh;
         position: sticky;
         top: 0;
     }
+
+    .page-body{
+        flex-direction: row;
+    }
+
 
     .top-row {
         position: sticky;
@@ -74,8 +87,6 @@ main {
         padding-left: 2rem !important;
         padding-right: 1.5rem !important;
     }
-
-
 }
 
 #blazor-error-ui {
