--- a/Patient.Api/Patient.Api.Client/Layout/PatientMenu.razor
+++ b/Patient.Api/Patient.Api.Client/Layout/PatientMenu.razor
@@ -1,4 +1,7 @@
 ﻿@layout Patient.Api.Client.Layout.UserLayout
+
+@inject IJSRuntime _jsRunTIme
+
 @rendermode InteractiveWebAssembly
 
 
@@ -53,40 +56,23 @@
             
         </div>
         <div class="col d-flex d-flex-column justify-content-center align-items-center" >
-            <div class="myaccount-icon" @onclick="OnMyAccount">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi-person-circle" viewBox="0 0 16 16">
-                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
-                    <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1" />
-                </svg>
-            </div>
-            <div class="myaccount-menu  @(isAccountMenuVisible ? "myaccount-menu-visible" : "myaccount-menu-notvisible")">
-                <div class="nav-item">
-                    <NavLink class="nav-link">
-                        <span aria-hidden="true"></span>Moje konto
-                        
-                    </NavLink>
-                </div>
-                <div class="nav-item">
-                    <NavLink class="nav-link" href="/pacjent/dokumentacja-medyczna">
-                        <span aria-hidden="true"></span>Dokumentacja medyczna
-                    </NavLink>
-                </div>
-                <div class="nav-item">
-                    <NavLink class="nav-link">
-                        <span aria-hidden="true"></span>Opcja3
-                    </NavLink>
-                </div>
+            <div class="dropdown">
+                <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                    <div class="myaccount-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi-person-circle" viewBox="0 0 16 16">
+                            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
+                            <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1" />
+                        </svg>
+                    </div>
+                </a>
+
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                    <li><a class="Moje Konto" href="/pacjent/konto">Moje konto</a></li>
+                    <li><a class="Dokumentacja medyczna" href="/pacjent/dokumentacja-medyczna">Dokumentacja</a></li>
+                </ul>
             </div>
         </div>
-
-
-
-
-        
-        
-        
-                
-        
+   
         
         
 
@@ -95,10 +81,10 @@
 
 
 @code{
-    private bool isAccountMenuVisible = false;
 
-    private void OnMyAccount()
-    {
-        isAccountMenuVisible = !isAccountMenuVisible;
-    }
+    
+
+    
+
+    
 }
